@startuml auth-service
title auth-service — src/

package "cpp-httplib" {
  class "httplib::Server" as HttplibServer
}

package "nlohmann-json / OpenSSL" {
  class "nlohmann::json" as Json
  class "HMAC-SHA256" as Hmac
}

namespace base64_utils {
  class base64_utils <<namespace>> {
    +{static} encodeUrl(data: vector<uint8_t>) : string
    +{static} decodeUrl(text: string) : vector<uint8_t>
  }
}

class Token {
  +value : string
  +expiresAt : int64
}

class TokenService {
  +issueToken(subject: string) : Token
  +verifyToken(token: string) : optional<string>
  +issueRefreshToken(subject: string) : Token
  +verifyRefreshToken(token: string) : optional<string>
  -issueTokenInternal(subject: string, ttl: seconds, isRefresh: bool) : Token
  -verifyTokenInternal(token: string, expectRefresh: bool) : optional<string>
}
TokenService ..> Token : creates
TokenService ..> Hmac : signs/verifies with
TokenService ..> Json : encodes payload as
TokenService ..> base64_utils.base64_utils : uses

struct OtpIdentity {
  +login : string
  +email : optional<string>
  +telegramChatId : optional<string>
}
class UserServiceClient {
  +verifyCredentials(login: string, password: string) : bool
  +registerUser(login: string, password: string) : bool
  +resolveOtpIdentifier(identifier: string) : optional<OtpIdentity>
}
UserServiceClient ..> "user-service" : POST /users/verify-credentials,\nPOST /users/register,\nPOST /users/resolve-otp-identifier
UserServiceClient ..> OtpIdentity : returns

interface ICodeDeliveryChannel {
  +send(destination: string, code: string)
}
class LoggingCodeDeliveryChannel {
  +send(destination: string, code: string)
}
LoggingCodeDeliveryChannel ..|> ICodeDeliveryChannel

class TlsConnection {
  +isConnected() : bool
  +writeLine(line: string)
  +writeRaw(data: string)
  +readLine() : string
}
note bottom of TlsConnection
  issue #156/#174: тонкая обёртка над
  OpenSSL BIO для построчного TLS-
  соединения — общая транспортная основа
  для SMTP (SmtpCodeDeliveryChannel) и
  HTTP/1.1 (TelegramCodeDeliveryChannel),
  без внешней библиотеки вроде libcurl.
end note

class SmtpCodeDeliveryChannel {
  +send(destination: string, code: string)
  +{static} fromEnvironment() : optional<SmtpConfig>
}
SmtpCodeDeliveryChannel ..|> ICodeDeliveryChannel
SmtpCodeDeliveryChannel ..> TlsConnection : uses
struct SmtpConfig {
  +host : string
  +port : int
  +username : string
  +password : string
  +fromAddress : string
}
SmtpCodeDeliveryChannel ..> SmtpConfig : uses

class TelegramCodeDeliveryChannel {
  +send(destination: string, code: string)
  +{static} fromEnvironment() : optional<TelegramConfig>
}
TelegramCodeDeliveryChannel ..|> ICodeDeliveryChannel
TelegramCodeDeliveryChannel ..> TlsConnection : uses
struct TelegramConfig {
  +botToken : string
}
TelegramCodeDeliveryChannel ..> TelegramConfig : uses
note bottom of TelegramCodeDeliveryChannel
  issue #174: альтернативный канал доставки
  OTP-кода — один HTTPS POST на Telegram Bot
  API (api.telegram.org/bot<token>/sendMessage)
  поверх того же TlsConnection, без libcurl.
  destination — chat_id получателя, не
  username и не номер телефона.
end note

class OtpStore {
  +issue(login: string) : string
  +verify(login: string, code: string) : bool
  -{static} generateNumericCode() : string
  -{static} hashCode(code: string) : string
}
note bottom of OtpStore
  issue #156: одноразовые 6-значные коды,
  хранятся хешированными (SHA-256) в памяти —
  у auth-service нет своей БД, тот же подход,
  что и у RateLimiter.
end note

class HttpServer {
  +listen(host: string, port: int)
  +stop()
  -handleIssueToken(request, response)
  -handleVerifyToken(request, response)
  -handleRegister(request, response)
  -handleRefresh(request, response)
  -handleOtpRequest(request, response)
  -handleOtpVerify(request, response)
}
HttpServer --> TokenService : delegates to (const&)
HttpServer --> UserServiceClient : checks credentials via (const&)
HttpServer --> ICodeDeliveryChannel : доставляет код через (email, const&)
HttpServer --> ICodeDeliveryChannel : доставляет код через (Telegram, const*,\nnullable — issue #174)
note right of HttpServer
  RateLimiter (issue #102) по request.remote_addr
  защищает handleIssueToken/handleRegister/
  handleOtpRequest/handleOtpVerify — каждый
  начинается с rateLimiter_.allow(...) и отвечает
  429 при исчерпании окна. handleVerifyToken и
  handleRefresh сознательно НЕ лимитированы (issue
  #224, pentest-проход подтвердил это как осознанное
  решение, не пропуск) — ни один не принимает
  учётные данные, только уже подписанный токен;
  подобрать валидную HMAC-подпись перебором
  нереально, так что ограничивать частоту здесь
  нечего защищать от подбора — только от общей CPU-
  нагрузки, что не входит в задачу RateLimiter.
end note
HttpServer *-- OtpStore : owns
HttpServer *-- HttplibServer : owns

note right of HttpServer
  Routes:
  POST /auth/token    -> handleIssueToken
                         (verifies login/password via
                         UserServiceClient first)
  POST /auth/verify   -> handleVerifyToken
  POST /auth/register -> handleRegister
                         (forwards to user-service, then
                         issues a token immediately on
                         success — auto-login)
  POST /auth/refresh  -> handleRefresh (issue #105)
                         exchanges a still-valid
                         refresh_token for a fresh
                         access token, no credentials
                         needed again
  POST /auth/otp/request -> handleOtpRequest (issue #156/#174)
                         always 200 — не палит существование
                         аккаунта; resolveOtpIdentifier() +
                         OtpStore::issue() + доставка через
                         Telegram (если задан telegram_chat_id
                         и настроен TELEGRAM_BOT_TOKEN — в
                         приоритете), иначе email
  POST /auth/otp/verify  -> handleOtpVerify (issue #156)
                         OtpStore::verify() -> тот же формат
                         ответа, что у /auth/token

  /auth/token и /auth/register также
  возвращают долгоживущий refresh_token
  вместе с access-токеном
  (TokenService::issueRefreshToken()).
  Refresh-токены несут "typ": "refresh"
  в payload, поэтому их нельзя
  использовать как access-токен (и
  наоборот), даже несмотря на общий
  секрет подписи — см. doc-комментарий
  TokenService.
end note

@enduml
